--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
             </div>
 
             <div id="article_area">
-                <article id="ghibli_animation_article1">
+                <article id="ghibli_animation_article1" class="ghibli_animation_article">
                     <h3 class="article_title">아카데미 장편 애니메이션을 수상한 걸작</h3>
                     <h1 class="article_title_big">센과 치히로의 행방불명</h1>
                     <p class="article_content">
@@ -187,7 +187,7 @@
                             src="./img/main/aniamtion_SpiritedAway_Background1.png" alt="SpiritedAway">
                     </div>
                 </article>
-                <article id="ghibli_animation_article2" class="article_row">
+                <article id="ghibli_animation_article2" class="article_row ghibli_animation_article">
                     <div class="article_align">
                         <div class="article_left">
                             <h3 class="article_title">지브리표 성장 로맨스!</h3>
@@ -204,7 +204,7 @@
                         </div>
                     </div>
                 </article>
-                <article id="ghibli_animation_article3" class="article_row">
+                <article id="ghibli_animation_article3" class="article_row ghibli_animation_article">
                     <div class="article_align">
                         <div class="article_left">
                             <h3 class="article_title">따뜻한 판타지 드라마</h3>
@@ -222,7 +222,7 @@
                         </div>
                     </div>
                 </article>
-                <article id="ghibli_animation_article4" class="article_row">
+                <article id="ghibli_animation_article4" class="article_row ghibli_animation_article">
                     <div class="article_align">
                         <div class="article_left">
                             <h3 class="article_title">자연과 인간을 탐구한 대작</h3>
@@ -253,72 +253,74 @@
                 <path d="M24 63L13 74L2 63" stroke="#00B6FF" stroke-width="3" />
             </svg>
 
-                <article class="others-flip-all" >
-                        <div class="others-flip-align" id="others-flip-1">
-                            <div class="others-flip">
-                                <div class="flip-inner">
-                                    <div class="flip-front">
-                                        <img src="img/main/ghibli_musical_1.jpg" alt="센과치히로의 행방불명_앞면">
-                                    </div>
-                                    <div class="flip-back">
-                                        <img src="img/main/ghibli_musical_1-1.jpg" alt="센과치히로의 행방불명_뒷면">
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="others-flip">
-                                <div class="flip-inner">
-                                    <div class="flip-front">
-                                        <img src="img/main/ghibli_musical_2.jpg" alt="센과치히로의 행방불명_앞면">
-                                    </div>
-                                    <div class="flip-back">
-                                        <img src="img/main/ghibli_musical_2-1.jpg" alt="센과치히로의 행방불명_뒷면">
+                <div class=flip-line>
+                    <article class="others-flip-all" >
+                            <div class="others-flip-align" id="others-flip-1">
+                                <div class="others-flip">
+                                    <div class="flip-inner">
+                                        <div class="flip-front">
+                                            <img src="img/main/ghibli_musical_1.jpg" alt="센과치히로의 행방불명_앞면">
+                                        </div>
+                                        <div class="flip-back">
+                                            <img src="img/main/ghibli_musical_1-1.jpg" alt="센과치히로의 행방불명_뒷면">
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
-                            <div class="flip-content">
-                                <h3 class="article_title">연극</h3>
-                                <h1 class="article_title_big">센과 치히로의<br>행방불명</h1>
-                                <p class="article_content">
-                                    아카데미 상을 수상한 센과 치히로의 행방불명을 최초<br>
-                                    무대 각색한 것으로, 놀라운 싱크로율을 자랑하며 전석<br>
-                                    매진을 달성했다. 주인공 치히로 역은 인기 배우 하시모토<br>
-                                    칸나와 카미시라이시 모네 더블캐스팅으로 진행된다.</p>
-                                <button class="button_big">자세히 알아보기</button>
-                            </div>
-                        </div>
-                        <div class="others-flip-align" id="others-flip-2">
-                            <div class="others-flip">
-                                <div class="flip-inner">
-                                    <div class="flip-front">
-                                        <img src="img/main/ghibli_movie_1.jpg" alt="귀를기울이면_앞면">
-                                    </div>
-                                    <div class="flip-back">
-                                        <img src="img/main/ghibli_movie_1-1.jpg" alt="귀를기울이면_뒷면">
+                                <div class="others-flip">
+                                    <div class="flip-inner">
+                                        <div class="flip-front">
+                                            <img src="img/main/ghibli_musical_2.jpg" alt="센과치히로의 행방불명_앞면">
+                                        </div>
+                                        <div class="flip-back">
+                                            <img src="img/main/ghibli_musical_2-1.jpg" alt="센과치히로의 행방불명_뒷면">
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
-                            <div class="others-flip">
-                                <div class="flip-inner">
-                                    <div class="flip-front">
-                                        <img src="img/main/ghibli_movie_2.jpg" alt="귀를기울이면_앞면">
-                                    </div>
-                                    <div class="flip-back">
-                                        <img src="img/main/ghibli_movie_2-1.jpg" alt="귀를기울이면_뒷면">
-                                    </div>
+                                <div class="flip-content">
+                                    <h3 class="article_title">연극</h3>
+                                    <h1 class="article_title_big">센과 치히로의<br>행방불명</h1>
+                                    <p class="article_content">
+                                        아카데미 상을 수상한 센과 치히로의 행방불명을 최초<br>
+                                        무대 각색한 것으로, 놀라운 싱크로율을 자랑하며 전석<br>
+                                        매진을 달성했다. 주인공 치히로 역은 인기 배우 하시모토<br>
+                                        칸나와 카미시라이시 모네 더블캐스팅으로 진행된다.</p>
+                                    <button class="button_big">자세히 알아보기</button>
                                 </div>
                             </div>
-                            <div class="flip-content">
-                                <h3 class="article_title">실사 영화</h3>
-                                <h1 class="article_title_big">귀를<br>기울이면</h1>
-                                <p class="article_content">
-                                    만화 '귀를 기울이면'을 원작으로 하며, 지브리의 '귀를 <br>
-                                    기울이면' 과는 같은 원작의 별개의 작품이지만 주인공<br>
-                                    시즈쿠의 복장이 애니메이션 버전의 시즈쿠 복장과 높은<br>
-                                    싱크로율을 보이며 지브리의 팬도 충분히 즐길 수 있다.</p>
-                                <button class="button_big">자세히 알아보기</button>
+                            <div class="others-flip-align" id="others-flip-2">
+                                <div class="others-flip">
+                                    <div class="flip-inner">
+                                        <div class="flip-front">
+                                            <img src="img/main/ghibli_movie_1.jpg" alt="귀를기울이면_앞면">
+                                        </div>
+                                        <div class="flip-back">
+                                            <img src="img/main/ghibli_movie_1-1.jpg" alt="귀를기울이면_뒷면">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="others-flip">
+                                    <div class="flip-inner">
+                                        <div class="flip-front">
+                                            <img src="img/main/ghibli_movie_2.jpg" alt="귀를기울이면_앞면">
+                                        </div>
+                                        <div class="flip-back">
+                                            <img src="img/main/ghibli_movie_2-1.jpg" alt="귀를기울이면_뒷면">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="flip-content">
+                                    <h3 class="article_title">실사 영화</h3>
+                                    <h1 class="article_title_big">귀를<br>기울이면</h1>
+                                    <p class="article_content">
+                                        만화 '귀를 기울이면'을 원작으로 하며, 지브리의 '귀를 <br>
+                                        기울이면' 과는 같은 원작의 별개의 작품이지만 주인공<br>
+                                        시즈쿠의 복장이 애니메이션 버전의 시즈쿠 복장과 높은<br>
+                                        싱크로율을 보이며 지브리의 팬도 충분히 즐길 수 있다.</p>
+                                    <button class="button_big">자세히 알아보기</button>
+                                </div>
                             </div>
-                        </div>
-                </article>
+                    </article>
+                </div>
 
         </div>
     </section>
@@ -388,8 +390,8 @@
                         <h1 class="article_title_big">그대들,<br>어떻게 살 것인가</h1>
                         <p class="article_content">
                             미야자키 하야오 감독이 자신의 은퇴선언을 뒤집고<br>
-                            10년만에 발표한 작품으로, 미야자키 하야오 감독 연출의<br>
-                            애니메이션 중 최고의 작화라고 평가받고있습니다.</p>
+                            10년만에 발표한 작품으로, 미야자키 하야오 감독이<br>
+                            연출한 애니메이션 중 최고의 작화라고 평가받고있다.</p>
                         <button class="button_big">자세히 알아보기</button>
                     </div>
                 </article>
@@ -405,7 +407,7 @@
                         <p class="article_content">
                             2022년 11월 개원한 지브리 파크의 제작 현장의<br>
                             지휘자이자 애니메이션 감독인 미야자키 고로 감독의<br>
-                            일화와 지브리 파크 제작 자료를 소개합니다.</p>
+                            일화와 지브리 파크 제작 자료를 소개한다.</p>
                         <button class="button_big">자세히 알아보기</button>
                     </div>
                 </article>
@@ -421,7 +423,7 @@
                         <p class="article_content">
                             미야자키 하야오 감독의 모든 애니메이션 음악을 담당하며<br>
                             지브리 애니메이션을 더욱 풍성하게 만들었던<br>
-                            히사이시 조의 음악을 필하모닉 오케스트라와 함께하세요.</p>
+                            히사이시 조의 음악을 필하모닉 오케스트라로 만나볼 수 있다.</p>
                         <button class="button_big">자세히 알아보기</button>
                     </div>
                 </article>
