--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
                 </div>
             </div>
             <ul id="category">
-                <li class="first_category">
-                    스튜디오 지브리
+                <li class="first_category">스튜디오 지브리
+                    
                     <ul class="second_category">
                         <li><a href="javascript:void(0)">스튜디오 지브리 소개</a></li>
                         <li><a href="javascript:void(0)">스튜디오 지브리 연혁</a></li>
@@ -58,16 +58,16 @@
                 <li class="first_category">지브리 여행지
                     <ul class="second_category">
                         <li><a href="javascript:void(0)">지브리 파크</a></li>
-                        <li><a href="javascript:void(0)">미타카의 숲<br>지브리 미술관</a></li>
+                        <li><a href="javascript:void(0)">지브리 미술관</a></li>
                     </ul>
                 </li>
                 <li class="first_category" id="language_select">
-                    <div>
-                        <span class="material-icons" id="language_icon">language</span><span
-                            id="language-korean">한국어</span>
-                    </div>
+                        <span>
+                            <span class="material-icons" id="language_icon">language</span>
+                            <span id="language-korean">한국어</span>
+                        </span>
                     <ul class="second_category">
-                        <li><a href="javascript:void(0)" id="language-english">English</a></li>
+                        <li id="language-english">English</li>
                     </ul>
                 </li>
             </ul>
@@ -131,7 +131,7 @@
                 </article>
                 <article id="about_ghibli_article3" class="to-top delay-1">
                     <h3 class="article_title">연혁</h3>
-                    <p class="article_content">다카하타 이사오, 미야자키 하야오 감독의<br>
+                    <p class="article_content">다카하타 이사오, 미야자키 하야오 감독의
                         애니메이션 영화 제작을 목적으로,
                         1985년 6월에 활동을 시작했다.
                         1992년, 현재의 소재지에 스튜디오를 건설했고,
@@ -282,9 +282,9 @@
                                     <h3 class="article_title">연극</h3>
                                     <h1 class="article_title_big">센과 치히로의<br>행방불명</h1>
                                     <p class="article_content">
-                                        아카데미 상을 수상한 센과 치히로의 행방불명을 최초<br>
-                                        무대 각색한 것으로, 놀라운 싱크로율을 자랑하며 전석<br>
-                                        매진을 달성했다. 주인공 치히로 역은 인기 배우 하시모토<br>
+                                        아카데미 상을 수상한 센과 치히로의 행방불명을 최초
+                                        무대 각색한 것으로, 놀라운 싱크로율을 자랑하며 전석
+                                        매진을 달성했다. 주인공 치히로 역은 인기 배우 하시모토
                                         칸나와 카미시라이시 모네 더블캐스팅으로 진행된다.</p>
                                     <button class="button_big">자세히 알아보기</button>
                                 </div>
@@ -314,9 +314,9 @@
                                     <h3 class="article_title">실사 영화</h3>
                                     <h1 class="article_title_big">귀를<br>기울이면</h1>
                                     <p class="article_content">
-                                        만화 '귀를 기울이면'을 원작으로 하며, 지브리의 '귀를 <br>
-                                        기울이면' 과는 같은 원작의 별개의 작품이지만 주인공<br>
-                                        시즈쿠의 복장이 애니메이션 버전의 시즈쿠 복장과 높은<br>
+                                        만화 '귀를 기울이면'을 원작으로 하며, 지브리의 '귀를
+                                        기울이면' 과는 같은 원작의 별개의 작품이지만 주인공
+                                        시즈쿠의 복장이 애니메이션 버전의 시즈쿠 복장과 높은
                                         싱크로율을 보이며 지브리의 팬도 충분히 즐길 수 있다.</p>
                                     <button class="button_big">자세히 알아보기</button>
                                 </div>
@@ -347,7 +347,7 @@
                 </h3>
                 <h1 class="article_title_big">지브리 파크</h1>
                 <p class="article_content">
-                    지브리 애니메이션속에 등장하는 건축물들이 재현된<br>
+                    지브리 애니메이션속에 등장하는 건축물들이 재현된
                     스튜디오 지브리의 세계를 대표하는 공원이다.</p>
                 <button class="button_big">입장권 예매하기</button>
                 <div class="ghibli_world_tour_img_1"></div>
@@ -360,7 +360,7 @@
                 </h3>
                 <h1 class="article_title_big">지브리 미술관</h1>
                 <p class="article_content">
-                    미야자키 하야오 감독이 직접 디자인한 공간으로,<br>
+                    미야자키 하야오 감독이 직접 디자인한 공간으로,
                     상설전시와 특별전시가 진행된다.</p>
                 <button class="button_big">입장권 예매하기</button>
                 <div class="ghibli_world_tour_img_2"></div>
@@ -392,8 +392,8 @@
                         <h3 class="article_title">영화</h3>
                         <h1 class="article_title_big">그대들,<br>어떻게 살 것인가</h1>
                         <p class="article_content">
-                            미야자키 하야오 감독이 자신의 은퇴선언을 뒤집고<br>
-                            10년만에 발표한 작품으로, 미야자키 하야오 감독이<br>
+                            미야자키 하야오 감독이 자신의 은퇴선언을 뒤집고
+                            10년만에 발표한 작품으로, 미야자키 하야오 감독이
                             연출한 애니메이션 중 최고의 작화라고 평가받고있다.</p>
                         <button class="button_big">자세히 알아보기</button>
                     </div>
@@ -408,8 +408,8 @@
                         <h3 class="article_title">전시회</h3>
                         <h1 class="article_title_big">지브리 파크와<br>지브리 전시회</h1>
                         <p class="article_content">
-                            2022년 11월 개원한 지브리 파크의 제작 현장의<br>
-                            지휘자이자 애니메이션 감독인 미야자키 고로 감독의<br>
+                            2022년 11월 개원한 지브리 파크의 제작 현장의
+                            지휘자이자 애니메이션 감독인 미야자키 고로 감독의
                             일화와 지브리 파크 제작 자료를 소개한다.</p>
                         <button class="button_big">자세히 알아보기</button>
                     </div>
@@ -424,8 +424,8 @@
                         <h3 class="article_title">콘서트</h3>
                         <h1 class="article_title_big">히사이시 조<br>영화음악 콘서트</h1>
                         <p class="article_content">
-                            미야자키 하야오 감독의 모든 애니메이션 음악을 담당하며<br>
-                            지브리 애니메이션을 더욱 풍성하게 만들었던<br>
+                            미야자키 하야오 감독의 모든 애니메이션 음악을 담당하며
+                            지브리 애니메이션을 더욱 풍성하게 만들었던
                             히사이시 조의 음악을 필하모닉 오케스트라로 만나볼 수 있다.</p>
                         <button class="button_big">자세히 알아보기</button>
                     </div>
