--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/main_tablet.css">
-    <link rel="stylesheet" href="css/common.css">
+    <link rel="stylesheet" href="css/main_cellphone.css">
     <link rel="icon" href="img/favicon.png">
 </head>
 
@@ -169,9 +170,9 @@
                     <h3 class="article_title to-top delay-0">아카데미 장편 애니메이션을 수상한 걸작</h3>
                     <h1 class="article_title_big to-top delay-1">센과 치히로의 행방불명</h1>
                     <p class="article_content to-top delay-2">
-                        부모님과 이사를 가던 치히로는 가족들과 우연히 수상한 터널을 지나<br>
-                        신들이 사는 세계에 발을 내딛게 된다. 허락없이 그 곳의 음식을 먹은 치히로의<br>
-                        부모님은 돼지가 되어버리고, 사라질 위기에 처한 치히로. 이 때 신비한 소년<br>
+                        부모님과 이사를 가던 치히로는 가족들과 우연히 수상한 터널을 지나
+                        신들이 사는 세계에 발을 내딛게 된다. 허락없이 그 곳의 음식을 먹은 치히로의
+                        부모님은 돼지가 되어버리고, 사라질 위기에 처한 치히로. 이 때 신비한 소년
                         하쿠를 만나 신들의 목욕탕에서 일하며 ‘센’이라는 새로운 이름을 얻게되는데...</p>
                     <button class="button_big to-top delay-3">자세히 알아보기</button>
                     <div id="ghibli_animation_article1_img">
@@ -347,7 +348,7 @@
                 </h3>
                 <h1 class="article_title_big">지브리 파크</h1>
                 <p class="article_content">
-                    지브리 애니메이션속에 등장하는 건축물들이 재현된
+                    지브리 애니메이션 속 건축물이 재현된
                     스튜디오 지브리의 세계를 대표하는 공원이다.</p>
                 <button class="button_big">입장권 예매하기</button>
                 <div class="ghibli_world_tour_img_1"></div>
@@ -393,8 +394,8 @@
                         <h1 class="article_title_big">그대들,<br>어떻게 살 것인가</h1>
                         <p class="article_content">
                             미야자키 하야오 감독이 자신의 은퇴선언을 뒤집고
-                            10년만에 발표한 작품으로, 미야자키 하야오 감독이
-                            연출한 애니메이션 중 최고의 작화라고 평가받고있다.</p>
+                            10년만에 발표한 작품으로, 미야자키 하야오 감독
+                            연출의 애니메이션 중 최고의 작화라고 평가받고있다.</p>
                         <button class="button_big">자세히 알아보기</button>
                     </div>
                 </article>
@@ -424,9 +425,9 @@
                         <h3 class="article_title">콘서트</h3>
                         <h1 class="article_title_big">히사이시 조<br>영화음악 콘서트</h1>
                         <p class="article_content">
-                            미야자키 하야오 감독의 모든 애니메이션 음악을 담당하며
-                            지브리 애니메이션을 더욱 풍성하게 만들었던
-                            히사이시 조의 음악을 필하모닉 오케스트라로 만나볼 수 있다.</p>
+                            미야자키 하야오 감독의 애니메이션 음악을 담당하며
+                            애니메이션을 더욱 아름답게 만들었던
+                            히사이시 조의 음악을 필하모닉 오케스트라를 통해 만나볼 수 있다.</p>
                         <button class="button_big">자세히 알아보기</button>
                     </div>
                 </article>
@@ -475,6 +476,7 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="js/main.js"></script>
+
 </body>
 
 </html>
