--- a/index.html
+++ b/index.html
@@ -101,7 +101,8 @@
                             <span>
                                 <span class="material-icons" id="language_icon-middle">language</span>
                                 <span id="language-korean-middle">한국어</span>
-                            </span><span class="plus">+</span>
+                            </span>
+                            <span class="plus">+</span>
                             <ul class="second_category-middle">
                                 <li id="language-english-middle">English</li>
                             </ul>
@@ -208,7 +209,7 @@
                 </div>
                 <div id="article_area">
                     <article id="ghibli_animation_article1" class="ghibli_animation_article">
-                        <h3 class="article_title to-top delay-0">아카데미 장편 애니메이션을 수상한 걸작</h3>
+                        <h3 class="article_title to-top delay-0">아카데미 장편 애니메이션 상을 수상한 걸작</h3>
                         <h1 class="article_title_big to-top delay-1">센과 치히로의 행방불명</h1>
                         <p class="article_content to-top delay-2">
                             부모님과 이사를 가던 치히로는 가족들과 우연히 수상한 터널을 지나
@@ -289,7 +290,7 @@
                 <!--article_area_middle-->
                 <div id="article_area-middle">
                     <article id="ghibli_animation_article1" class="ghibli_animation_article to-top delay-0">
-                        <h3 class="article_title">아카데미 장편 애니메이션을 수상한 걸작</h3>
+                        <h3 class="article_title">아카데미 장편 애니메이션 수상!</h3>
                         <h1 class="article_title_big">센과 치히로의 행방불명</h1>
                         <p class="article_content">
                             치히로는 가족들과 이사를 가던 중 우연히 수상한 터널을 지나
@@ -305,7 +306,7 @@
                         <div class="article_align">
                             <div class="article_left">
                                 <h3 class="article_title">지브리표 성장 로맨스!</h3>
-                                <h1 class="article_title_big">하울의 움직이는 성</h1>
+                                <h1 class="article_title_big">하울의<br>움직이는 성</h1>
                                 <p class="article_content">
                                     19세기 말. 모자 공방 주인의 딸 소피는, 황야의 마녀라
                                     불리는 의문의 여성에게 노파가 되는 저주를 받고 황야로
@@ -562,7 +563,7 @@
                         </div>
                     <div class="notice_right">
                         <h3 class="article_title">영화</h3>
-                        <h1 class="article_title_big">그대들,<br>어떻게 살 것인가</h1>
+                        <h1 class="article_title_big">「그대들, 어떻게<br> 살 것인가」 개봉</h1>
                         <p class="article_content">
                             미야자키 하야오 감독이 자신의 은퇴선언을 뒤집고
                             10년만에 발표한 작품으로, 미야자키 하야오 감독
@@ -572,11 +573,11 @@
                 </article>
                 <article class="notice" id="notice_2">
                         <div class="notice_poster">
-                            <img src="img/main/notice_article_2.jpg" alt="그대들, 어떻게 살 것인가">
+                            <img src="img/main/notice_article_2.jpg" alt="지브리 파크와 지브리 전시회">
                         </div>
                     <div class="notice_right">
                         <h3 class="article_title">전시회</h3>
-                        <h1 class="article_title_big">지브리 파크와<br>지브리 전시회</h1>
+                        <h1 class="article_title_big">지브리 파크와<br> 지브리 전시회</h1>
                         <p class="article_content">
                             2022년 11월 개원한 지브리 파크의 제작 현장의
                             지휘자이자 애니메이션 감독인 미야자키 고로 감독의
@@ -586,12 +587,12 @@
                 </article>
                 <article class="notice" id="notice_3">
                         <div class="notice_poster">
-                            <img src="img/main/notice_article_3.jpg" alt="그대들, 어떻게 살 것인가">
+                            <img src="img/main/notice_article_3.jpg" alt="히사이시 조 영화음악 콘서트">
                         </div>
 
                     <div class="notice_right">
                         <h3 class="article_title">콘서트</h3>
-                        <h1 class="article_title_big">히사이시 조<br>영화음악 콘서트</h1>
+                        <h1 class="article_title_big">히사이시 조<br> 영화음악 콘서트</h1>
                         <p class="article_content">
                             미야자키 하야오 감독의 애니메이션 음악을 담당하며
                             애니메이션을 더욱 아름답게 만들었던
