--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
 
                 <!--article_area_middle-->
                 <div id="article_area-middle">
-                    <article id="ghibli_animation_article1" class="ghibli_animation_article to-top delay-0">
+                    <article id="ghibli_animation_article1-middle" class="ghibli_animation_article to-top delay-0">
                         <h3 class="article_title">아카데미 장편 애니메이션 수상!</h3>
                         <h1 class="article_title_big">센과 치히로의 행방불명</h1>
                         <p class="article_content">
@@ -302,7 +302,7 @@
                             <img class="article_element" src="./img/main/aniamtion_SpiritedAway1.png" alt="howl">
                         </div>
                     </article>
-                    <article id="ghibli_animation_article2" class="article_row ghibli_animation_article  to-top delay-0">
+                    <article id="ghibli_animation_article2-middle" class="article_row ghibli_animation_article  to-top delay-0">
                         <div class="article_align">
                             <div class="article_left">
                                 <h3 class="article_title">지브리표 성장 로맨스!</h3>
@@ -319,7 +319,7 @@
                             </div>
                         </div>
                     </article>
-                    <article id="ghibli_animation_article3" class="article_row ghibli_animation_article to-top delay-0">
+                    <article id="ghibli_animation_article3-middle" class="article_row ghibli_animation_article to-top delay-0">
                         <div class="article_align">
                             <div class="article_left">
                                 <h3 class="article_title">따뜻한 판타지 드라마</h3>
@@ -337,7 +337,7 @@
                             </div>
                         </div>
                     </article>
-                    <article id="ghibli_animation_article4" class="article_row ghibli_animation_article to-top delay-0">
+                    <article id="ghibli_animation_article4-middle" class="article_row ghibli_animation_article to-top delay-0">
                         <div class="article_align">
                             <div class="article_left">
                                 <h3 class="article_title">자연과 인간을 탐구한 대작</h3>
@@ -356,7 +356,6 @@
                     </article>
                 </div>
             </div>
-    </div>
     </section>
     <!--Ghibli others-->
     <section id="ghibli_others">
@@ -438,7 +437,7 @@
 
             <div class=flip-line-middle>
                 <article class="others-flip-all">
-                    <div class="others-flip-align to-top delay-0" id="others-flip-1">
+                    <div class="others-flip-align to-top delay-0" id="others-flip-1-middle">
                         <div class="others-flip">
                             <div class="flip-inner">
                                 <div class="flip-front">
@@ -470,7 +469,7 @@
                             <button class="button_big">자세히 알아보기</button>
                         </div>
                     </div>
-                    <div class="others-flip-align to-top delay-1" id="others-flip-2">
+                    <div class="others-flip-align to-top delay-1" id="others-flip-2-middle">
                         <div class="others-flip">
                             <div class="flip-inner">
                                 <div class="flip-front" id="flip-img-2">
@@ -544,7 +543,6 @@
                 <button class="button_big">입장권 예매하기</button>
                 <div class="ghibli_world_tour_img_2"></div>
             </article>
-        </div>
         </div>
     </section>
     <!--ghibli_notice-->
@@ -641,11 +639,10 @@
 
         </div>
     </footer>
-    </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="js/main.js"></script>
-
+    </div>
 </body>
 
 </html>
